--- a/public/js/templates/SplashTemplate.jade
+++ b/public/js/templates/SplashTemplate.jade
@@ -42,7 +42,9 @@
   
   //- Popular o recent pets in adoption
   section
-      
+  
+    //- Change languaje test
+    a(href='#' id='Change') Cambiar Idioma
   
   
   
