lang and img test

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,9 +28,55 @@ html(lang='es')
     
     
   body
+  
+    //- Change languaje test
+    a(href='#' id='Change') Cambiar Idioma
     
-    //- Container for app client
-    #container  
+    hr
+    
+    //- To home
+    p 
+      a(href='#') Ir a Casa
+    
+    //- Change languaje test
+    p 
+      a(href='#pet') Ir a pet
+    
+    
+    
+    //- config hidden
+    #behind
+    
+    #over    
+    
+      header
+        nav
+          ul
+            
+            li
+              a(href!='#')
+                span#lngSplashNavMain
+                        
+            li
+              a(href!='#')
+                span#lngSplashNavExplore
+            
+            li
+              a(href!='#')
+                span#lngSplashNavAmazcota
+    
+            li
+              a(href!='#')
+                span#lngSplashNavLogin
+                
+            li
+              a(href!='#')
+                span#lngSplashNavSearch 
+    
+    
+    
+      //- Container for app client
+      #container  
       
     
     //- For fb-APi
