--- a/public/js/templates/PetProfileTemplate.jade
+++ b/public/js/templates/PetProfileTemplate.jade
@@ -7,5 +7,10 @@
     li
       span#lngPetGender
   
-  canvas#uploader(width='600' height='600')      
+  form
+    input(type='file' name='photo')
+    button upload
+  
+  //- canvas#uploader(width='600' height='600')
+  span      
   img#targetimg
