--- a/public/js/templates/SplashTemplate.jade
+++ b/public/js/templates/SplashTemplate.jade
@@ -1,12 +1,25 @@
 //- Slider
+
+//- //player.vimeo.com/video/33219961?autoplay=1&amp;loop=1
+//- 10691835 // dogs
+//- 33219961 // dogs in cars
+//- iframe(src='//player.vimeo.com/video/10691835?autoplay=1&amp;loop=1' width='500' height='281' 
+//-        frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen>)
+
 section
-  #logo
-  em#lngSplashSlogan
-  input(type='text' value='' placeholder='')
-  span#lngSplashLoginWithFacebook 
-  button facebook
-  button#lngSplashLoginStart
+
+  div#logo
+  
+  form
+    em#lngSplashSlogan
+    input#lngSplashLoginEmail(type='text' value='' placeholder='Your Email')
+    button#lngSplashLoginStart
+    span#lngSplashLoginWithFacebook 
+    button facebook
+
   
 
 //- Popular o recent pets in adoption
 section
+
+  
