--- a/sass/modules/main.sass
+++ b/sass/modules/main.sass
@@ -32,6 +32,16 @@ body
   @include size(100%)
   margin: 0
   padding: 0
+  
+  
+#behind
+  @include position(absolute, 0 0 0 0)
+  margin: 0
+  
+  
+#over
+  margin: 0
+  
 
 a
   text-decoration: none
