--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -4,7 +4,13 @@
 // Mixins
 @import "partial/BorderRadius"
 @import "partial/BoxShadow"
-
+@import "partial/FlexBox"
+@import "partial/IconCircleIntoCircle"
+@import "partial/FormInputTextSimple"
+@import "partial/SwitchBackgroundColor"
 
 // Main module
 @import "modules/main"
+@import "modules/Menu"
+@import "modules/splash/Splash"
+
