--- a/views/index.jade
+++ b/views/index.jade
@@ -30,17 +30,7 @@ html(lang='es')
   body
   
     //- Change languaje test
-    a(href='#' id='Change') Cambiar Idioma
-    
-    hr
-    
-    //- To home
-    p 
-      a(href='#') Ir a Casa
-    
-    //- Change languaje test
-    p 
-      a(href='#pet') Ir a pet
+    //- a(href='#' id='Change') Cambiar Idioma
     
     
     
@@ -55,6 +45,7 @@ html(lang='es')
             
             li
               a(href!='#')
+                i
                 span#lngSplashNavMain
                         
             li
@@ -71,6 +62,7 @@ html(lang='es')
                 
             li
               a(href!='#')
+                i
                 span#lngSplashNavSearch 
     
     
