--- a/sass/modules/splash/Splash.sass
+++ b/sass/modules/splash/Splash.sass
@@ -84,9 +84,10 @@
       button:nth-child(3)
         @include size(7rem 2.5rem)
         margin: .5rem 0 1rem 0
-        background: transparent
+        background: rgba(255,255,255,.1)
         border: 1px solid #FFF
         color: #FFF
+        text-shadow: 1px 1px 1px rgba(0,0,0,.35)
         cursor: pointer
         font-size: 1rem
       
@@ -106,5 +107,17 @@
         color: #FFF
         cursor: pointer
         font-size: 1rem
-    
+        
+  // Slider
+  section:nth-child(2)
+    @include size(98vw auto)
+    margin: 0 auto
+    h2
+      @include size(100% auto)
+      display: block
+      font-size: 2.5rem
+      padding: .3rem 0 
+    >section
+      @include size(100%)
+      @include FlexBox(false, space-around, row wrap)
   
