--- a/sass/partial/FlexBox.sass
+++ b/sass/partial/FlexBox.sass
@@ -30,20 +30,21 @@
   display: -webkit-flex
   display: flex
   
-  
-  -webkit-box-align: $align
-  -moz-box-align: $align
-  
-  -ms-flex-align: $align
-  
-  -webkit-align-items: $align
-  align-items: $align
+  @if $align
+    -webkit-box-align: $align
+    -moz-box-align: $align
+    
+    -ms-flex-align: $align
+    
+    -webkit-align-items: $align
+    align-items: $align
  
   @if $justify
     -webkit-justify-content: $justify
     justify-content: $justify
   
-  -webkit-flex-flow: $flow
-  -moz-flex-flow: $flow
-  -ms-flex-flow: $flow
-  flex-flow: $flow
+  @if $flow
+    -webkit-flex-flow: $flow
+    -moz-flex-flow: $flow
+    -ms-flex-flow: $flow
+    flex-flow: $flow
