'last for today'

--- a/sass/modules/Menu.sass
+++ b/sass/modules/Menu.sass
@@ -3,7 +3,7 @@
   
     //@include size(100% auto)
     @include size(95vw auto)
-    @include position(absolute, 0 0 0 1vw)
+    @include position(absolute, 0 0 0 .5vw)
     //max-height: 20vh
     min-height: 8vh
     padding: 0 1.5vw
@@ -23,7 +23,6 @@
       // $limargin: $liwidth / ($liitems * 2)
        
       ul
-        //@include size(100%)
         @include size(100%)
         list-style-type: none
         margin: 0 auto
