--- a/public/js/templates/SplashTemplate.jade
+++ b/public/js/templates/SplashTemplate.jade
@@ -6,6 +6,9 @@
 //- iframe(src='//player.vimeo.com/video/10691835?autoplay=1&amp;loop=1' width='500' height='281' 
 //-        frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen>)
 
+//-canvas#video(width='1024' height='700')
+//-img#mjpg(src='http://root:chinitossucks@172.19.0.202/mjpg/video.mjpg')
+
 section
 
   div#logo
