--- a/public/js/templates/SplashTemplate.jade
+++ b/public/js/templates/SplashTemplate.jade
@@ -26,5 +26,26 @@ section
 section
   h2#lngSplahPopularAdoption Adoption
   section
+  button.lngUtlViewMore Ver más
+  
+//- Lost
+section
+  h2#lngSplahLost Lost
+  section
+  button.lngUtlViewMore Ver más
+  
+//- Ads  
+aside#ads
+  h2#lngUtlAdTime Tiempo de Publicidad
+  span#lngUtlAdExcuse Este sitio se mantiene gracias a la publicidad si deseas contribuir puedes visitar cualquiera de los anuncios mostrados acontinuación mil gracias!! 
+    a(href='#').lngUtlAboutUs Más Acerca de nosotros
+  section  
+    article
+      img(src='img/adsense1.jpg')
+    article
+      img(src='img/adsense2.jpg')
+    article
+      img(src='img/adsense3.jpg')
+    
 
   
