--- a/sass/partial/SwitchBackgroundColor.sass
+++ b/sass/partial/SwitchBackgroundColor.sass
@@ -20,3 +20,21 @@
     background: -o-linear-gradient(-45deg,  #02a676 1%,#008c72 21%,#007369 47%,#008c72 79%,#02a676 100%)
     background: -ms-linear-gradient(-45deg,  #02a676 1%,#008c72 21%,#007369 47%,#008c72 79%,#02a676 100%)
     background: linear-gradient(135deg,  #02a676 1%,#008c72 21%,#007369 47%,#008c72 79%,#02a676 100%)
+    
+  @if $Switch == 3  
+    background: url('../img/bg.jpg')
+    background-size: 100% 100%
+    background-repeat: no-repeat
+    background-position: center top
+    
+  @if $Switch == 4  
+    background: url('http://cdn.twitrcovers.com/wp-content/uploads/2012/11/Gaussian-Blur-l.jpg')
+    background-size: 100% 100%
+    background-repeat: no-repeat
+    background-position: center top
+    
+  @if $Switch == 5    
+    background: url('http://upload.wikimedia.org/wikipedia/commons/9/95/Working_dog_edit.jpg')
+    background-size: 100% 100%
+    background-repeat: no-repeat
+    background-position: center top
