--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -12,6 +12,10 @@
 // Main module
 @import "modules/main"
 @import "modules/Menu"
+
+@import "modules/Behind"
+@import "modules/Over"
+
 @import "modules/splash/Splash"
 @import "modules/PetItem"
 
