--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,17 @@ html(lang='es')
     
     //- config hidden
     #behind
-    
+      nav
+        ul
+          li
+            a
+              span Explorar             
+          li
+            a
+              span Mis Mascotas
+          li
+            a
+              span Acerca de..
     
     #over    
     
