--- a/sass/modules/PetItem.sass
+++ b/sass/modules/PetItem.sass
@@ -3,6 +3,7 @@
   @include size($containersize $containersize)
   text-align: center
   display: block
+  margin: $containersize/8
   
   img
     $size: $containersize - 65
@@ -12,14 +13,14 @@
     margin: 0 auto
     
   em
-    @extend: .font-bold
+    @extend .font-bold
     font-size: 1.15rem
     font-style: normal
     display: block
     text-transform: uppercase
     
   span
-    @extend: .font-regular
+    @extend .font-regular
     font-size: .8rem
     color: rgba(0,0,0,.5)
     display: block
