--- a/sass/modules/main.sass
+++ b/sass/modules/main.sass
@@ -1,5 +1,20 @@
 
+// Variables
+
+$blue: #29abe2
+$orange: #f7931e
+$magenta: #d4145a
+$gray: #b3b3b3
+
+$gw: 97vw
+$gh: 95vh
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,700)
+
+html
+  @include size(100%)
+  margin: 0
+  padding: 0  
 
 body
   @include size(100%)
@@ -8,6 +23,7 @@ body
   font-family: 'Open Sans', sans-serif
   font-weight: 300
   overflow-x: hidden
+  color: black
   
 
 
@@ -33,19 +49,12 @@ body
   @include size(100%)
   margin: 0
   padding: 0
-  
-  
-#behind
-  @include position(absolute, 0 0 0 0)
-  margin: 0
-  
-  
-#over
-  margin: 0
+
   
 
 a
   text-decoration: none
+  color: black
 
 button
   &:active
