--- a/sass/modules/splash/Splash.sass
+++ b/sass/modules/splash/Splash.sass
@@ -4,7 +4,7 @@
   
   // iframe video vimeo
   iframe
-    @include size(98vw 97vh)
+    @include size($gw 97vh)
     @include position(absolute, 1.5vh 0 0 1vw)
     margin: 0 auto
     display: block
@@ -16,17 +16,11 @@
   // Slider
   section:nth-child(1)
     //@include size(100%)
-    @include size(98vw 97vh)
-    margin: 1.5vh auto
-    // background: url('../img/bg.jpg')
-    // background: url('http://cdn.twitrcovers.com/wp-content/uploads/2012/11/Gaussian-Blur-l.jpg')
-    //background: url('http://upload.wikimedia.org/wikipedia/commons/9/95/Working_dog_edit.jpg')
-    // background-size: 100% 100%
-    // background-repeat: no-repeat
-    // background-position: center top
+    @include size($gw $gh)
+    margin: (100vh - $gh)/2 auto
     
-    @include SwitchBackgroundColor(1)
-    
+    @include SwitchBackgroundColor(5)
+   
     overflow: hidden
     display: -webkit-box
     -webkit-box-orient: vertical
@@ -114,14 +108,76 @@
         
   // Slider
   section:nth-child(2)
-    @include size(98vw auto)
+    @include size($gw auto)
     margin: 0 auto
-    h2
+    >h2
+      @extend .font-regular
       @include size(100% auto)
       display: block
-      font-size: 2.5rem
+      font-size: 2rem
+      //font-weight: 300
       padding: .3rem 0 
     >section
       @include size(100%)
       @include FlexBox(false, center, row wrap)
+    >button
+      @include size(8rem 2.5rem)
+      @include BorderRadius(1.3rem)
+      background: transparent
+      border: 1px solid $blue
+      margin: 2rem auto
+      color: $blue
+      cursor: pointer
+      display: block
+  
+  
+  // Slider
+  section:nth-child(3)
+    @include size($gw auto)
+    margin: 0 auto
+    >h2
+      @extend .font-regular
+      @include size(100% auto)
+      display: block
+      font-size: 2rem
+      padding: .3rem 0 
+    >section
+      @include size(100%)
+      @include FlexBox(false, center, row wrap)
+    >button
+      @include size(8rem 2.5rem)
+      @include BorderRadius(1.3rem)
+      background: transparent
+      border: 1px solid $blue
+      margin: 2rem auto
+      color: $blue
+      cursor: pointer
+      display: block
+  
+  aside:nth-child(4)
+    @include size($gw auto)
+    margin: 0 auto
+    h2
+      @extend .font-regular
+      @include size(100% auto)
+      display: block
+      font-size: 2rem
+      padding: .3rem 0 0 
+      margin: 0
+    >span
+      color: $gray
+      display: block 
+      font-size: .85rem
+      a
+        color: $blue
+    >section
+      @include size(100%)
+      @include FlexBox(false, center, row wrap)
+      margin: 2rem auto
+      article
+        @include size(20rem auto)
+        img
+          margin: 0 auto
+          cursor: pointer
+    
   
