Add Grunt ecosys + less

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,10 @@ html(lang='es')
     link(rel='apple-touch-icon' href='/apple-touch-icon.png')
         
     //- Styles
-    link(rel='stylesheet', href='css/styles.css')
+    link(rel='stylesheet', href='css/style.css')
+    
+    
+    //- To exports underscore templates engine <%= variable.contents %>
     
     
   body
@@ -40,7 +43,7 @@ html(lang='es')
         ul
           li
             a
-              span Explorar             
+              span Explorar
           li
             a
               span Mis Mascotas
