'ultima en global'

--- a/public/templates/PetItemTemplate.jade
+++ b/public/templates/PetItemTemplate.jade
@@ -1,4 +1,5 @@
-a.PetItem(href!='/pet/{{ _id }}')
-  img(src!="{{ profilephoto }}") 
-  em {{ name }}
-  span {{ specie }}
+//- script#PeopleTemplate(type='text/x-handlebars-template')
+a.PetItem(href!='/pet/{{_id}}')
+  img(src!="{{profilephoto}}") 
+  em {{name}}
+  span {{specie}}
