--- a/views/index.jade
+++ b/views/index.jade
@@ -91,5 +91,5 @@ html(lang='es')
     #fb-root
     
     //- Load all client logic 
-    script(data-main='js/main' src='js/libs/require.js/require.min.js')
+    script(data-main='js/main' src='js/libs/require.min.js')
     
